Adjusted Logout of Admin Panel

--- a/template/main/landing.html
+++ b/template/main/landing.html
@@ -78,7 +78,7 @@
                     </li>
 
                     <li>
-                        <a class="each-category-link" href="#">
+                        <a class="each-category-link" href="{% url 'logout' %}">
                             <span class="category-text">Logout</span>
                             <span class="category-icon">
                                 <i class="fa fa-arrow-right-from-bracket"></i>
