--- a/template/components/accounts.html
+++ b/template/components/accounts.html
@@ -109,7 +109,7 @@
         width: 90%;
         max-width: 550px;
         margin: auto;
-        /* display: grid; */
+        display: grid;
     }
 
     .new-btn button {
