--- a/template/components/posts.html
+++ b/template/components/posts.html
@@ -111,7 +111,7 @@
         width: 90%;
         max-width: 550px;
         margin: auto;
-        /* display: grid; */
+        display: grid;
     }
 
     .new-btn button {
