Completed Update Profile Page

--- a/template/components/home.html
+++ b/template/components/home.html
@@ -17,12 +17,12 @@
 <div class="component-cover">
     <ul class="info-cover">
         <li>
-            <span class="label">Username:</span>
+            <span class="label"> <b>Username:</b></span>
             <span class="info">{{request.user.username}}</span>
         </li>
 
         <li>
-            <span class="label">Email:</span>
+            <span class="label"><b>Email:</b></span>
             <span class="info">{{request.user.email}}</span>
         </li>
     </ul>
