--- a/template/main/landing.html
+++ b/template/main/landing.html
@@ -52,7 +52,7 @@
                 </div>
                 <ul class="category-list">
                     <li>
-                        <a class="each-category-link" href="#">
+                        <a class="each-category-link" href="{% url 'home' %}">
                             <span class="category-text">Home</span>
                             <span class="category-icon">
                                 <i class="fa fa-home"></i>
@@ -82,6 +82,15 @@
                             <span class="category-text">Password</span>
                             <span class="category-icon">
                                 <i class="fa fa-key"></i>
+                            </span>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a class="each-category-link" href="{% url 'profile' %}">
+                            <span class="category-text">Profile</span>
+                            <span class="category-icon">
+                                <i class="fa fa-user-cog"></i>
                             </span>
                         </a>
                     </li>
